@@ -32,7 +32,7 @@
           <th align="right"><?lsmb text('Account') ?></th>
           <td colspan="3">
               <?lsmb PROCESS ajaxselect element_data = {
-                     name = "account"
+                     name = "accno"
                      initial_value = ""
                      text_attr = 'accno'
                      value_attr = 'id'
@@ -84,13 +84,13 @@
 	  <th align="right"><?lsmb text('From') ?></th>
 	  <td><?lsmb PROCESS input element_data = {
                class="date" 
-               name="datefrom" 
+               name="date_from" 
                size="11" 
                title=datestyle } ?></td>
 	  <th align="right"><?lsmb text('To') ?></th>
 	  <td><?lsmb PROCESS input element_data = {
                  class="date" 
-                 name="dateto" 
+                 name="date_to" 
                  size="11" 
                  title=datestyle } ?></td>
 	</tr>
